<resources>
    <string name="app_name">VideoMaker</string>

    <string name="permission_dialog_title">权限请求</string>
    <string name="permission_dialog_confirm">同意</string>
    <string name="permission_dialog_cancel">拒绝</string>
    <string name="message_permission_rationale">请授权以下权限以保证程序能正常运行:\n\n%1$s</string>
    <string name="permission_name_calendar">Calendar</string>
    <string name="permission_name_camera">Camera</string>
    <string name="permission_name_contacts">Contacts</string>
    <string name="permission_name_accounts">Accounts</string>
    <string name="permission_name_location">Location</string>
    <string name="permission_name_microphone">Microphone</string>
    <string name="permission_name_phone">Phone</string>
    <string name="permission_name_sensors">Body Sensors</string>
    <string name="permission_name_sms">SMS</string>
    <string name="permission_name_storage">Storage</string>
    <string name="permission_name_write_settings">系统设置</string>
    <string name="permission_name_system_alert_window">显示悬浮窗</string>
    <string name="permission_name_install_packages">安装应用</string>
    <string name="permission_name_send_notification">发送通知</string>
    <string name="permission_name_access_notification">访问系统通知</string>

    <string name="start_record">开始\n录制</string>
    <string name="stop_record">停止\n录制</string>
    <string name="take_photo">拍照</string>
    <string name="select_music">选择\n音乐</string>
    <string name="play_music">播放\n音乐</string>
    <string name="pause_music">暂停\n音乐</string>
    <string name="switch_camera">切换\n摄像头</string>
    <string name="normal">正常</string>
    <string name="gray">灰度</string>
    <string name="color_reverse">反色</string>
    <string name="zero_time_ms">00:00</string>
    <string name="zero_time_hms">00:00:00</string>
    <string name="select_image">选择\n图片</string>
    <string name="start_compose">开始\n合成</string>
    <string name="stop_compose">停止\n合成</string>
    <string name="last_image">上\n一张</string>
    <string name="next_image">下\n一张</string>
    <string name="auto_paly_image">自动换图</string>
    <string name="image_play_interval">换图间隔</string>
    <string name="please_select_image">请选择图片</string>
    <string name="image_interval_too_small">间隔太小，请设置大于%d毫秒</string>
    <string name="start_live">开始直播</string>
    <string name="stop_live">停止直播</string>
</resources>
