<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.wtz.libvideomaker.imagevideo.WeImageVideoView
        android:id="@+id/we_image_video_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/ll_indicator_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="7dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone">

        <View
            android:id="@+id/v_record_indicator_light"
            android:layout_width="@dimen/dp_10"
            android:layout_height="@dimen/dp_10"
            android:background="@drawable/circle_ball_shape" />

        <TextView
            android:id="@+id/tv_record_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/zero_time_hms"
            android:textColor="#ff0000"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_select_music_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@+id/ll_control_music_layout"
        android:layout_gravity="bottom"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_select_music"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:background="#80ffffff"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:text="@string/select_music"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tv_music_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="#ffff00"
            android:textSize="@dimen/sp_14" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_control_music_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@+id/ll_image_control1"
        android:layout_gravity="bottom"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_music_play_control"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:background="#80ffffff"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:text="@string/play_music"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tv_music_play_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/zero_time_ms"
            android:textColor="#ffff00"
            android:textSize="@dimen/sp_14" />

        <SeekBar
            android:id="@+id/seek_bar_music"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:maxHeight="20dp"
            android:minHeight="20dp"
            android:progress="0"
            android:progressDrawable="@drawable/seekbar_style"
            android:secondaryProgress="0"
            android:thumb="@drawable/seekbar_thumb"
            android:thumbOffset="0dp" />

        <TextView
            android:id="@+id/tv_music_total_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero_time_ms"
            android:textColor="#ffff00"
            android:textSize="@dimen/sp_14" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_image_control1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll_image_control2"
        android:layout_gravity="bottom"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:background="#80ffffff"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/auto_paly_image"
            android:textColor="#000000"
            android:textSize="@dimen/sp_14" />

        <com.suke.widget.SwitchButton
            android:id="@+id/switch_auto_play_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            app:sb_checked="true"
            app:sb_checked_color="#FFB623" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/image_play_interval"
            android:textColor="#000000"
            android:textSize="@dimen/sp_14" />

        <EditText
            android:id="@+id/et_image_interval"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:textColor="#ffff00"
            android:textSize="@dimen/sp_14" />

        <Spinner
            android:id="@+id/spinner_time_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:popupBackground="#A8A8A8"
            android:textColor="#000000"
            android:textSize="@dimen/sp_14" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_image_control2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_select_image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="#80ffffff"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:text="@string/select_image"
            android:textSize="@dimen/sp_14" />

        <Button
            android:id="@+id/btn_last_image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="#80ffffff"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:text="@string/last_image"
            android:textSize="@dimen/sp_14" />

        <Button
            android:id="@+id/btn_next_image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="#80ffffff"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:text="@string/next_image"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tv_current_index"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="0.6"
            android:background="#80ffffff"
            android:gravity="center"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:text="0/0"
            android:textColor="#ffff00"
            android:textSize="@dimen/sp_14" />

        <Button
            android:id="@+id/btn_record"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#80ffffff"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:text="@string/start_compose"
            android:textSize="@dimen/sp_14" />

    </LinearLayout>

</RelativeLayout>