<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.wtz.libvideomaker.camera.WeCameraView
        android:id="@+id/we_camera"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/ll_indicator_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="7dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone">

        <View
            android:id="@+id/v_record_indicator_light"
            android:layout_width="@dimen/dp_10"
            android:layout_height="@dimen/dp_10"
            android:background="@drawable/circle_ball_shape" />

        <TextView
            android:id="@+id/tv_record_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/zero_time_hms"
            android:textColor="#ff0000"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_select_music_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@+id/ll_control_music_layout"
        android:layout_gravity="bottom"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_select_music"
            android:layout_width="@dimen/dp_76"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:background="#80ffffff"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:text="@string/select_music"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tv_music_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="#ffff00"
            android:textSize="@dimen/sp_14" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_control_music_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@+id/ll_select_audio_source_layout"
        android:layout_gravity="bottom"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_music_play_control"
            android:layout_width="@dimen/dp_76"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:background="#80ffffff"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:text="@string/play_music"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tv_music_play_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/zero_time_ms"
            android:textColor="#ffff00"
            android:textSize="@dimen/sp_14" />

        <SeekBar
            android:id="@+id/seek_bar_music"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:maxHeight="20dp"
            android:minHeight="20dp"
            android:progress="0"
            android:progressDrawable="@drawable/seekbar_style"
            android:secondaryProgress="0"
            android:thumb="@drawable/seekbar_thumb"
            android:thumbOffset="0dp" />

        <TextView
            android:id="@+id/tv_music_total_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero_time_ms"
            android:textColor="#ffff00"
            android:textSize="@dimen/sp_14" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_select_audio_source_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_above="@+id/ll_image_control2"
        android:layout_gravity="bottom"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dp_76"
            android:layout_height="match_parent"
            android:background="#80ffffff"
            android:gravity="center"
            android:text="声音来源"
            android:textColor="#000000"
            android:textSize="@dimen/sp_14" />

        <RadioGroup
            android:id="@+id/rg_audio_source_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:background="#80ffffff"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_source_mic"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:checked="true"
                android:text="麦克风"
                android:textSize="@dimen/sp_14" />

            <RadioButton
                android:id="@+id/rb_source_music"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="音乐"
                android:textSize="@dimen/sp_14" />

            <RadioButton
                android:id="@+id/rb_source_mic_music"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:text="麦克风\n+音乐"
                android:textSize="@dimen/sp_14" />

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_image_control2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_change_camera"
            android:layout_width="@dimen/dp_76"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:background="#80ffffff"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:text="@string/switch_camera"
            android:textSize="@dimen/sp_14" />

        <RadioGroup
            android:id="@+id/rg_render_type"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#80ffffff"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_normal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/normal"
                android:textSize="@dimen/sp_14" />

            <RadioButton
                android:id="@+id/rb_gray"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/gray"
                android:textSize="@dimen/sp_14" />

            <RadioButton
                android:id="@+id/rb_color_reverse"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/color_reverse"
                android:textSize="@dimen/sp_14" />

        </RadioGroup>

        <Button
            android:id="@+id/btn_record"
            android:layout_width="@dimen/dp_76"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:background="#80ffffff"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:text="@string/start_live"
            android:textSize="@dimen/sp_14" />

    </LinearLayout>

</RelativeLayout>